// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`currentSelection when cursor is on link 1`] = `
Array [
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "Atlassian",
    "url": "https://www.google.com",
  },
]
`;

exports[`currentSelection when cursor is selecting a link 1`] = `
Array [
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "Atlassian",
    "url": "https://www.google.com",
  },
  Object {
    "text": "Atlassian",
    "url": "https://www.google.com",
  },
  Object {
    "text": "Atlassian",
    "url": "https://www.google.com",
  },
  Object {
    "text": "Atlassian",
    "url": "https://www.google.com",
  },
  Object {
    "text": "Atlassian",
    "url": "https://www.google.com",
  },
  Object {
    "text": "Atlassian",
    "url": "https://www.google.com",
  },
  Object {
    "text": "Atlassian",
    "url": "https://www.google.com",
  },
  Object {
    "text": "Atlassian",
    "url": "https://www.google.com",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "Atlassian",
    "url": "https://www.google.com",
  },
]
`;

exports[`currentSelection when cursor is selecting text and link 1`] = `
Array [
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "link",
    "url": "https://www.google.com",
  },
  Object {
    "text": "link",
    "url": "https://www.google.com",
  },
  Object {
    "text": "link",
    "url": "https://www.google.com",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": " ",
    "url": "",
  },
  Object {
    "text": " i",
    "url": "",
  },
  Object {
    "text": " is",
    "url": "",
  },
  Object {
    "text": " is ",
    "url": "",
  },
  Object {
    "text": " is a",
    "url": "",
  },
  Object {
    "text": " is a ",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
]
`;

exports[`currentSelection when no selection 1`] = `
Array [
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
]
`;

exports[`currentSelection when selection 1`] = `
Array [
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "",
    "url": "",
  },
  Object {
    "text": "T",
    "url": "",
  },
  Object {
    "text": "Te",
    "url": "",
  },
  Object {
    "text": "Tex",
    "url": "",
  },
  Object {
    "text": "Text",
    "url": "",
  },
]
`;
